[tool.poetry]
name = "docs-build-from-multirepo"
version = "0.1.0"
description = ""
authors = ["samzong.lu <samzong.lu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^8.3.3"
mkdocs-multirepo-plugin = "^0.3.7"
jieba = "^0.42.1"
mkdocs-minify-plugin = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
